# gtypist

./: .gitignore  AUTHORS  ChangeLog  INSTALL  INSTALL.in  Makefile.am  NEWS  QUESTIONS  README  README.git  THANKS  TODO  autogen.sh  configure-w32.in  configure.ac  mkinstalldirs  typefortune  typefortune.1  version.sh
doc/: ChangeLog  Makefile.am  gtypist.cs.texi  gtypist.es.texi  gtypist.texi
lessons/: ChangeLog  Makefile.am  c.typ  cs.typ  d.typ  demo.typ  esp.typ  ktbg.typ  ktbg_long.typ  ktbr.typ  ktcz.typ  ktde.typ  ktde2.typ  ktde_neo.typ  ktde_number.typ  ktdk.typ  ktdk2.typ  ktdvorak.typ  ktdvorak_abcd.typ  ktdvorak_es.typ  kten.typ  kten_gb.typ  kten_us.typ  ktes.typ  ktes1.typ  ktes2.typ  ktes3.typ  ktes_cat.typ  ktfi.typ  ktfi_kids.typ  ktfr.typ  ktfr2.typ  ktgr.typ  kthu.typ  kthu_expert.typ  ktit.typ  ktnl.typ  ktnl_junior.typ  ktno.typ  ktpl.typ  (+20 more)
m4/: Makefile.am
po/: ChangeLog  Makevars  cs.po  de.po  en.po  es.po  eu.po  fi.po  fr.po  nl.po  pl.po  ro.po  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: ChangeLog  Makefile.am  banner.c  banner.h  cmdline.c  cmdline.ggo  cmdline.h  cursmenu.c  cursmenu.h  error.c  error.h  gtypist.c  gtypist.h  infoview.c  infoview.h  script.c  script.h  speedbox.c  speedbox.h  utf8.c  utf8.h
tools/: Makefile.am  findwords  gtypist-mode.el  gtypist.pm  gtypist.vim  gtypist.yaml  gtypist_filetype.vim  ktouch2typ.pl  ktouchOLD2typ.pl  tt2typ.pl  typcombine  typv1tov2
