## This file is part of GNU Typist
##
## Copyright (C) 2001, 2002, 2003 Simon Baldwin (simonb@sco.com)
## Copyright (C) 2003, 2004, 2008, 2009, 2011, 2012, 2013, 2014, 2015,
##               2016, 2017, 2018, 2019
##               Felix Natter, Dmitry Rutsky, Tim Marston, Mihai Gătejescu
##
## GNU Typist is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## GNU Typist is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with GNU Typist.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

pkgdata_DATA =  gtypist.typ \
		c.typ \
		d.typ \
		m.typ \
		n.typ \
		p.typ \
		ro_special.typ \
		q.typ \
		r.typ \
		s.typ \
		t.typ \
		u.typ \
		v.typ \
		esp.typ \
		cs.typ \
		ru.typ \
		ttde.typ \
		demo.typ \
		ktbg.typ \
		ktbg_long.typ \
		ktde.typ \
		ktde2.typ \
		ktde_neo.typ \
		ktde_number.typ \
		ktdk.typ \
		ktdk2.typ \
		ktdvorak.typ \
		ktdvorak_abcd.typ \
		ktdvorak_es.typ \
		kten.typ \
		ktes.typ \
		ktes_cat.typ \
		ktfi.typ \
		ktfi_kids.typ \
		ktfr.typ \
		ktfr2.typ \
		kthu.typ \
		kthu_expert.typ \
		ktit.typ \
		ktnl.typ \
		ktnl_junior.typ \
		ktno.typ \
		ktpl.typ \
		ktru.typ \
		ktru_long.typ \
		ktru_slava.typ \
		ktsi.typ \
		kttr.typ

EXTRA_DIST= $(pkgdata_DATA)
