## This file is part of GNU Typist
##
## Copyright (C) 2001, 2002, 2003 Simon Baldwin (simonb@sco.com)
## Copyright (C) 2003, 2004, 2008, 2009, 2011, 2012, 2013, 2014, 2016,
##               2017, 2018, 2019
##               Felix Natter, Dmitry Rutsky, Tim Marston, Mihai Gătejescu
## Copyright (C) 2020, 2021, 2022, 2023, 2024 Felix Natter, Mihai Gătejescu
##
## GNU Typist is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## GNU Typist is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with GNU Typist.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

pkgdata_DATA =  gtypist.typ \
		c.typ \
		d.typ \
		m.typ \
		n.typ \
		p.typ \
		ro_special.typ \
		q.typ \
		r.typ \
		s.typ \
		symq.typ \
		symt.typ \
		t.typ \
		u.typ \
		v.typ \
		esp.typ \
		cs.typ \
		ru.typ \
		demo.typ \
		ktbg.typ \
		ktbr.typ \
		ktcz.typ \
		ktde.typ \
		ktdvorak.typ \
		kten_gb.typ \
		kten_us.typ \
		ktes1.typ \
		ktes2.typ \
		ktes3.typ \
		ktes_cat.typ \
		ktfi.typ \
		ktfr.typ \
		ktgr.typ \
		ktit.typ \
		ktnl.typ \
		ktnl_junior.typ \
		ktno.typ \
		ktru.typ \
		ktru_long.typ \
		kttr.typ

EXTRA_DIST= $(pkgdata_DATA)
