# This file is part of GNU Typist
#
# Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003
#               Simon Baldwin (simonb@sco.com)
# Copyright (C) 2003, 2004, 2008, 2009, 2011, 2012, 2013, 2014, 2016,
#               2017, 2018, 2019, 2020
#               Tim Marston, Michael Opdenacker, Felix Natter,
#               Mihai Gătejescu
# Copyright (C) 2021, 2022, 2023 Felix Natter, Mihai Gătejescu
#
# GNU Typist is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# GNU Typist is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Typist.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

lisp_LISP = gtypist-mode.el
# uncomment this if you don't want byte-compiling (see info automake)
#ELCFILES=

EXTRA_DIST=typcombine typv1tov2 ktouchOLD2typ.pl ktouch2typ.pl gtypist.pm \
tt2typ.pl gtypist-mode.el findwords gtypist.vim
